tests/compile_fail/message_trait/engine/is_ready.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::IsReady) {
    a(m);
}

fn main() {}